bin/tests/snapshots/empty_list_concat__lint_6fbfc18e453d85b4dc4baca074233158ce77af6b410f1b9c7491f41da8cd2a4c.snap
---
source: bin/tests/empty_list_concat.rs
---
[] ++ [] ++ []

---
[W23] Warning: Unnecessary concatenation with empty list
   ╭─[<temp_file_path>:1:1]
   │
 1 │ [] ++ [] ++ []
   · ───────┬──────  
   ·        ╰──────── Concatenation with the empty list, [], is a no-op
───╯
[W23] Warning: Unnecessary concatenation with empty list
   ╭─[<temp_file_path>:1:7]
   │
 1 │ [] ++ [] ++ []
   ·       ────┬───  
   ·           ╰───── Concatenation with the empty list, [], is a no-op
───╯
