bin/tests/snapshots/empty_list_concat__lint_b21d85ebdd134bcebe66a106e06b919bbaa8fccdbac4f5c9af1189831c5c7f4c.snap
---
source: bin/tests/empty_list_concat.rs
---
[] ++ [1 2 3]

---
[W23] Warning: Unnecessary concatenation with empty list
   ╭─[<temp_file_path>:1:1]
   │
 1 │ [] ++ [1 2 3]
   · ──────┬──────  
   ·       ╰──────── Concatenation with the empty list, [], is a no-op
───╯
